[tool.poetry]
name = "dsp"
version = "0.0.0"
description = "Disciplined Saddle Programming"
authors = ["Philipp Schiele", "Eric Luxenberg", "Stephen Boyd"]
license = "Apache 2.0"
readme = "README.md"
repository = "https://github.com/cvxgrp/dsp"
packages = [{include = "dsp"}]

[tool.poetry.dependencies]
python = ">=3.9"
cvxpy = "*"

[tool.poetry.group.test.dependencies]
numpy = "*"
pandas = "*"

[tool.poetry.dev-dependencies]
pytest = "7.4.0"
pytest-cov = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["E", "F", "I", "UP", "B", "ANN", "N", "C4"]
line-length = 100
target-version = "py37"
ignore = ["N806", "ANN101", "ANN102", "N801", "N802", "N803", "ANN401"]
exclude = ["tests"]
