[metadata]
name = dsp-cvxpy
version = 0.4.0
author = Philipp Schiele, Eric Luxenberg, Stephen Boyd
author_email = philipp.schiele@stat.uni-muenchen.de, ericlux@stanford.edu, boyd@stanford.edu
url = https://github.com/cvxgrp/dsp
description = Disciplined Saddle Programming
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License, Version 2.0

[options]
packages = find:
install_requires =
    cvxpy >= 1.3
    numpy
    scipy
zip_safe = True
include_package_data = True

[options.extras_require]
dev = tox

[options.package_data]
* = README.md
